# rust_enrollment

./: .env.example  .gitignore  Cargo.toml  tsconfig.base.json
apps/admin/src/: App.tsx  index.css
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: admin-shell.tsx  chat-composer.tsx  chat-landing.tsx  chat-result-panel.tsx  chat-shell.tsx  chat-transcript.tsx  use-chat-session.ts
apps/web/lib/: api-client.ts  public-query.ts
apps/web/tests/: api-client.test.ts  chat-shell.test.tsx  setup.ts
crates/admissions_agent/: Cargo.toml
crates/admissions_agent/src/: lib.rs
crates/agent_runtime/: Cargo.toml
crates/agent_runtime/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/domain/src/: lib.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: lib.rs
crates/eval_harness/: Cargo.toml
crates/eval_harness/fixtures/: chat-context-regression-cases.json  chat-context-regression-v2-cases.json  chat-context-regression-v3-cases.json  chat-context-regression-v4-cases.json  chat-context-regression-v5-cases.json
crates/eval_harness/src/: lib.rs
crates/importers/: Cargo.toml
crates/importers/sql/: admission_major_province_coverage.sql
crates/llm/: Cargo.toml
crates/probability/: Cargo.toml
crates/retrieval/: Cargo.toml
crates/retrieval/src/: lib.rs
docs/: admission-coverage-derived-table.md  ops-handoff-current-state.md  rust-backend-rewrite-plan.md
(+11 files in other folders)
