[package]
name = "retrieval"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
db = { workspace = true }
domain = { workspace = true }
embeddings = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
